--- a/application.yml
+++ b/application.yml
@@ -1,1 +1,13 @@
+eureka.instance.prefer-ip-address= true
+eureka.client.fetch-registry=true
+eureka.client.register-with-eureka= true
+eureka.client.service-url.defaultZone = http://localhost:8761/eureka
 
+eureka:
+  instance:
+    prefer-ip-address : true
+  client:
+    fetch-registry: true
+    register-with-eureka : true
+  service-url:
+    defaultZone : http://localhost:8761/eureka
